--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ideator</title>
+  <title>Awesome Ideas
+  </title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <link rel="stylesheet" href="http://railsgirls.com/assets/bootstrap.css">
   <%= javascript_include_tag "application" %>
